avoid layout breaks for server page, fixes issue #1522

--- a/pkg/base/cockpit.css
+++ b/pkg/base/cockpit.css
@@ -56,19 +56,35 @@ code, kbd, pre, samp {
 
 /* Break up sidebar in columns in smaller sizes*/
 
+@media (min-width: 992px) {
+    .cockpit-info-table {
+        table-layout: fixed;
+        width: 100%;
+    }
+}
+
 .cockpit-info-table td {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     padding-left: 0.75em;
     padding-top: 0.25em;
 }
 
 .cockpit-info-table td:first-child {
     text-align: right;
-    white-space:nowrap;
     color: #888888;
+    width: 35%;
 }
 
 .cockpit-info-table td:not(:first-child) {
     color: black;
+}
+
+.cockpit-info-table td button {
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 /* For table rows containing interactive controls like bars */
